// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders a Checkbox in error state correctly 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}

<div>
  <div
    class="c0"
  >
    <label
      class="MuiFormControlLabel-root makeStyles-root-163"
      data-id="my-checkbox"
      id="my-checkbox-label"
    >
      <span
        aria-disabled="false"
        class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-179 MuiCheckbox-root makeStyles-root-171 makeStyles-root-172 MuiCheckbox-colorSecondary MuiIconButton-colorSecondary"
        data-id="my-checkbox-CheckboxBase"
      >
        <span
          class="MuiIconButton-label"
        >
          <input
            aria-describedby="my-checkbox-helperText"
            class="PrivateSwitchBase-input-182"
            data-indeterminate="false"
            id="my-checkbox"
            type="checkbox"
            value=""
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 5v14H5V5h14m2-2H3v18h18V3z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </span>
      <span
        class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
      >
        Check 1
      </span>
    </label>
  </div>
</div>
`;

exports[`it renders a disabled Checkbox 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}

<div>
  <div
    class="c0"
  >
    <label
      class="MuiFormControlLabel-root makeStyles-root-244 Mui-disabled"
      data-id="my-checkbox"
      id="my-checkbox-label"
    >
      <span
        aria-disabled="true"
        class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-260 MuiCheckbox-root makeStyles-root-252 makeStyles-root-253 MuiCheckbox-colorSecondary PrivateSwitchBase-disabled-262 Mui-disabled MuiIconButton-colorSecondary Mui-disabled Mui-disabled"
        data-id="my-checkbox-CheckboxBase"
        tabindex="-1"
      >
        <span
          class="MuiIconButton-label"
        >
          <input
            aria-describedby="my-checkbox-helperText"
            class="PrivateSwitchBase-input-263"
            data-indeterminate="false"
            disabled=""
            id="my-checkbox"
            type="checkbox"
            value=""
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 5v14H5V5h14m2-2H3v18h18V3z"
            />
          </svg>
        </span>
      </span>
      <span
        class="MuiTypography-root MuiFormControlLabel-label Mui-disabled MuiTypography-body1"
      >
        Check 1
      </span>
    </label>
  </div>
</div>
`;

exports[`it renders an unchecked Checkbox with label 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}

<div>
  <div
    class="c0"
  >
    <label
      class="MuiFormControlLabel-root makeStyles-root-1"
      data-id="my-checkbox"
      id="my-checkbox-label"
    >
      <span
        aria-disabled="false"
        class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-17 MuiCheckbox-root makeStyles-root-9 makeStyles-root-10 MuiCheckbox-colorSecondary MuiIconButton-colorSecondary"
        data-id="my-checkbox-CheckboxBase"
      >
        <span
          class="MuiIconButton-label"
        >
          <input
            aria-describedby="my-checkbox-helperText"
            class="PrivateSwitchBase-input-20"
            data-indeterminate="false"
            id="my-checkbox"
            type="checkbox"
            value=""
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 5v14H5V5h14m2-2H3v18h18V3z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </span>
      <span
        class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
      >
        Check 1
      </span>
    </label>
  </div>
</div>
`;
